k8s/base/backend.yaml
---
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app-deployment
  labels:
    app: blog-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
        - name: blog-app
          image: fastapi_blog_prod:latest
          imagePullPolicy: IfNotPresent # pull from local image registry
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-storage
              mountPath: /app/media
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc

---
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app-service
spec:
  type: NodePort
  selector:
    app: blog-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
